--- a/templates/user/viewpage.html
+++ b/templates/user/viewpage.html
@@ -86,7 +86,7 @@
               
                 <li><a href="{%url 'food_list' %}" class="nav-link px-2 text-dark">View food</a></li>
               
-                <li><a href="{%url 'index' %}" class="nav-link px-2 text-dark">Bookings</a></li>
+                <li><a href="{%url 'user_bookings' %}" class="nav-link px-2 text-dark">Bookings</a></li>
               
             </ul>
             <!-- <div class="ml-auto">
