--- a/templates/catering/view_food.html
+++ b/templates/catering/view_food.html
@@ -87,7 +87,8 @@
                 <ul class="dropdown-menu">
                     <li><a class="dropdown-item" href="{%url 'food_view' %}">view Food</a></li>
                     <li><a class="dropdown-item" href="{%url 'add_food' %}">Add Food</a></li>
-                    <li><a class="dropdown-item" href="#">Bookings</a></li>
+                    <li><a class="dropdown-item" href="{%url 'staff_bookings' %}">Bookings</a></li>
+                    <li><a class="dropdown-item" href="{%url 'feedback' %}">view Feedbacks</a></li>
                     <li><a class="dropdown-item" href="{%url 'cateringsignout' %}">Signout</a></li>
                 </ul>
             </div>
