--- a/templates/user/viewpage.html
+++ b/templates/user/viewpage.html
@@ -85,8 +85,12 @@
                 {% endif %}
               
                 <li><a href="{%url 'food_list' %}" class="nav-link px-2 text-dark">View food</a></li>
+               
               
                 <li><a href="{%url 'user_bookings' %}" class="nav-link px-2 text-dark">Bookings</a></li>
+                <li><a href="{%url 'submit_feedback' %}" class="nav-link px-2 text-dark">Add feedback</a></li>
+                <li><a href="{%url 'view_feedbacks' %}" class="nav-link px-2 text-dark">viewfeedback</a></li>
+                <li><a href="{%url 'signout' %}" class="btn btn-warning px-2 text-dark">Signout</a></li>
               
             </ul>
             <!-- <div class="ml-auto">
