--- a/templates/user/login.html
+++ b/templates/user/login.html
@@ -71,8 +71,9 @@
                     <div class="fs-3 fw-semibold">Food<span class="text-warning">Bee</span></div>
                 </a>
             </div>
-
+            <li><a href="{%url 'index' %}" class="nav-link px-2 text-dark">Home</a></li> 
             <!-- <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
+
         <li><a href="#" class="nav-link px-2 text-dark">Home</a></li>
         <li><a href="#" class="nav-link px-2 text-dark">About</a></li>
         <li><a href="#" class="nav-link px-2 text-dark">Contact</a></li>
