--- a/templates/user/register.html
+++ b/templates/user/register.html
@@ -63,11 +63,11 @@
         </a>
       </div>
 
-      <!-- <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-        <li><a href="#" class="nav-link px-2 text-dark">Home</a></li>
-        <li><a href="#" class="nav-link px-2 text-dark">About</a></li>
+      <!-- <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">--> 
+         <li><a href="{%url 'index' %}" class="nav-link px-2 text-dark">Home</a></li> 
+        <!-- <li><a href="#" class="nav-link px-2 text-dark">About</a></li>
         <li><a href="#" class="nav-link px-2 text-dark">Contact</a></li>
-      </ul> -->
+      </ul> --> 
 
       <!-- <div class="col-md-3 text-end">
         <button type="button" class="btn btn-dark rounded-pill px-5 py-1 me-2 fw-semibold">Login</button>
